Github monitoring works.

--- a/Repos List/MyReposView1.ini
+++ b/Repos List/MyReposView1.ini
@@ -2,20 +2,12 @@
 ; That is, they do not affect the code and are here for demonstration purposes only.
 ; ----------------------------------
 
-
-[PyMeasure]
-DynamicVariables=1
-Measure=Plugin
-Plugin=PyPlugin
-Info=#@#py/mod_info.json
-Loader=Measure()
-UpdateDivider=1
-
 [Rainmeter]
 ; This section contains general settings that can be used to change how Rainmeter behaves.
 Update=1000
-Background=#@#Background.png
+; Background=#@#Background.png
 ; #@# is equal to Rainmeter\Skins\illustro\@Resources
+
 BackgroundMode=3
 BackgroundMargins=0,34,0,14
 
@@ -30,30 +22,58 @@ Version=1.0.0
 [Variables]
 ; Variables declared here can be used later on between two # characters (e.g. #MyVariable#).
 fontName=Trebuchet MS
-textSize=8
+textSize=12
 colorBar=235,170,0,255
 colorText=255,255,255,205
+colorTextDim=255,255,255,115
+colorTextLCM=150,150,255,255
+
+; Params for the generated list view:
+RepoMeasure=PyM_GHLatestRepos
+RepoNameStyle=styleRepoName
+RepoDateStyle=styleRepoDate
+RepoLCMStyle=styleRepoLCM
+RepoLCAStyle=styleRepoLCA
+offsetX = 0
+offsetY = 40
+spacingV = 10
+entryW = 600
+entryH = 40
+; Name
+entryNameX=5
+entryNameY=0
+entryNameW=250
+entryNameH=20
+; Date
+entryDateX=30
+entryDateY=25
+entryDateW=350
+entryDateH=20
+; Commit Message
+entryCommitMessageX=255
+entryCommitMessageY=5
+entryCommitMessageW=245
+entryCommitMessageH=20
+; Commit Author
+entryCommitAuthorX=235
+entryCommitAuthorY=25
+entryCommitAuthorW=245
+entryCommitAuthorH=20
+
+; Include the list view:
+@include=#@#py/dynamic_inc/repo_list_view.inc
 
 ; ----------------------------------
 ; MEASURES return some kind of value
 ; ----------------------------------
 
-[measureTime]
-; This measure returns the time in a 24-hour format (i.e. HH:MM).
-Measure=Time
-Format=%H:%M
-; For a 12-hour clock, change the Format option above to: %I:%M %p
-; Refer to the Rainmeter manual for other format codes.
-
-[measureDate]
-; Returns the date as DD.MM.YYYY
-Measure=Time
-Format=%d.%m.%Y
-
-[measureDay]
-; Returns the current day
-Measure=Time
-Format=%A
+[PyM_GHLatestRepos]
+DynamicVariables=1
+Measure=Plugin
+Plugin=PyPlugin
+Info=#@#py/mod_info.json
+Loader=gh_repos.GHLatestReposMeasure()
+UpdateDivider=1
 
 ; ----------------------------------
 ; STYLES are used to "centralize" options
@@ -71,7 +91,7 @@ FontSize=10
 AntiAlias=1
 ClipString=1
 
-[styleLeftText]
+[styleRepoName]
 StringAlign=Left
 ; Meters using styleLeftText will be left-aligned.
 StringCase=None
@@ -80,19 +100,43 @@ StringEffect=Shadow
 FontEffectColor=0,0,0,20
 FontColor=#colorText#
 FontFace=#fontName#
-FontSize=#textSize#
+FontSize=12
 AntiAlias=1
 ClipString=1
 
-[styleRightText]
-StringAlign=Right
+[styleRepoDate]
+StringAlign=Left
 StringCase=None
 StringStyle=Bold
 StringEffect=Shadow
 FontEffectColor=0,0,0,20
-FontColor=#colorText#
+FontColor=#colorTextDim#
 FontFace=#fontName#
-FontSize=#textSize#
+FontSize=8
+AntiAlias=1
+ClipString=1
+
+[styleRepoLCM]
+StringAlign=Left
+StringCase=None
+StringStyle=Bold
+StringEffect=Shadow
+FontEffectColor=0,0,0,20
+FontColor=#colorTextLCM#
+FontFace=#fontName#
+FontSize=10
+AntiAlias=1
+ClipString=1
+
+[styleRepoLCA]
+StringAlign=Left
+StringCase=None
+StringStyle=Bold
+StringEffect=Shadow
+FontEffectColor=0,0,0,20
+FontColor=#colorTextDim#
+FontFace=#fontName#
+FontSize=10
 AntiAlias=1
 ClipString=1
 
@@ -106,42 +150,62 @@ SolidColor=255,255,255,15
 [meterTitle]
 Meter=String
 MeterStyle=styleTitle
+MeasureName=PyM_GHLatestRepos
 ; Using MeterStyle=styleTitle will basically "copy" the
 ; contents of the [styleTitle] section here during runtime.
-X=100
+X=150
 Y=12
-W=190
+W=600
 H=18
-Text=Python Plugin Test 1
+Text=%1:
 ; %1 stands for the value of MeasureName (measureTime in this case).
 
-[meterDay]
-DynamicVariables=1
-Meter=String
-MeterStyle=styleLeftText
-MeasureName=PyMeasure
-X=10
-Y=40
-W=190
-H=14
-Text=[PyMeasure:Func(InstCount)]
 
-[meterDate]
-Meter=String
-MeterStyle=styleRightText
-MeasureName=measureDate
-X=200
-Y=0r
-; r stands for relative. In this case, the Y postition of meterValueCPU is 0 pixels
-; below the Y value of the previous meter (i.e it's the same as in meterLabelCPU).
-W=190
-H=14
-Text=%1
 
-[meterSeperator]
-Meter=Image
-MeterStyle=styleSeperator
-X=10
-Y=52
-W=190
-H=1
+; [styleLeftText]
+; StringAlign=Left
+; ; Meters using styleLeftText will be left-aligned.
+; StringCase=None
+; StringStyle=Bold
+; StringEffect=Shadow
+; FontEffectColor=0,0,0,20
+; FontColor=#colorText#
+; FontFace=#fontName#
+; FontSize=#textSize#
+; AntiAlias=1
+; ClipString=1
+
+; [styleRightText]
+; StringAlign=Right
+; StringCase=None
+; StringStyle=Bold
+; StringEffect=Shadow
+; FontEffectColor=0,0,0,20
+; FontColor=#colorText#
+; FontFace=#fontName#
+; FontSize=#textSize#
+; AntiAlias=1
+; ClipString=1
+
+; [meterRepoName1]
+; DynamicVariables=1
+; Meter=String
+; MeterStyle=styleLeftText
+; MeasureName=PyM_LatestRepos
+; X=10
+; Y=40
+; W=600
+; H=24
+; Text=[PyM_LatestRepos:Func(RepoName, 0)] | [PyM_LatestRepos:Func(RepoUpdatedAt, 0)]
+
+
+; [meterRepoName2]
+; DynamicVariables=1
+; Meter=String
+; MeterStyle=styleLeftText
+; MeasureName=PyM_LatestRepos
+; X=10
+; Y=70
+; W=600
+; H=24
+; Text=[PyM_LatestRepos:Func(RepoName, 1)] | [PyM_LatestRepos:Func(RepoUpdatedAt, 1)]
