--- a/Repos List/Local/Local_Repo_List1.ini
+++ b/Repos List/Local/Local_Repo_List1.ini
@@ -29,7 +29,7 @@ colorTextDim=255,255,255,115
 colorTextLCM=150,150,255,255
 
 ; Params for the generated list view:
-RepoMeasure=PyM_GHLatestRepos
+RepoMeasure=PyM_LocalLatestRepos
 RepoNameStyle=styleRepoName
 RepoDateStyle=styleRepoDate
 RepoLCMStyle=styleRepoLCM
@@ -60,19 +60,20 @@ entryCommitAuthorY=25
 entryCommitAuthorW=245
 entryCommitAuthorH=20
 
-; Include the list view:
-@include=#@#py/dynamic_inc/repo_list_view.inc
-
 ; ----------------------------------
 ; MEASURES return some kind of value
 ; ----------------------------------
 
-[PyM_GHLatestRepos]
+[MeterBackgroundShape]
+Meter=Shape
+Shape=Rectangle 0,0,520,300 | Fill Color 0,0,0,200 | StrokeWidth 2 | Stroke Color 255,255,255,50
+
+[PyM_LocalLatestRepos]
 DynamicVariables=1
 Measure=Plugin
 Plugin=PyPlugin
 Info=#@#py/mod_info.json
-Loader=gh_repos.GHLatestReposMeasure()
+Loader=local_repos.LocalLatestReposMeasure()
 UpdateDivider=1
 
 ; ----------------------------------
@@ -150,7 +151,7 @@ SolidColor=255,255,255,15
 [meterTitle]
 Meter=String
 MeterStyle=styleTitle
-MeasureName=PyM_GHLatestRepos
+MeasureName=PyM_LocalLatestRepos
 ; Using MeterStyle=styleTitle will basically "copy" the
 ; contents of the [styleTitle] section here during runtime.
 X=150
@@ -158,54 +159,9 @@ Y=12
 W=600
 H=18
 Text=%1:
-; %1 stands for the value of MeasureName (measureTime in this case).
+; %1 stands for the value of MeasureName (measureTime in this case)
+
+; Include the list view:
+@include=#@#py/dynamic_inc/repo_list_view.inc
 
 
-
-; [styleLeftText]
-; StringAlign=Left
-; ; Meters using styleLeftText will be left-aligned.
-; StringCase=None
-; StringStyle=Bold
-; StringEffect=Shadow
-; FontEffectColor=0,0,0,20
-; FontColor=#colorText#
-; FontFace=#fontName#
-; FontSize=#textSize#
-; AntiAlias=1
-; ClipString=1
-
-; [styleRightText]
-; StringAlign=Right
-; StringCase=None
-; StringStyle=Bold
-; StringEffect=Shadow
-; FontEffectColor=0,0,0,20
-; FontColor=#colorText#
-; FontFace=#fontName#
-; FontSize=#textSize#
-; AntiAlias=1
-; ClipString=1
-
-; [meterRepoName1]
-; DynamicVariables=1
-; Meter=String
-; MeterStyle=styleLeftText
-; MeasureName=PyM_LatestRepos
-; X=10
-; Y=40
-; W=600
-; H=24
-; Text=[PyM_LatestRepos:Func(RepoName, 0)] | [PyM_LatestRepos:Func(RepoUpdatedAt, 0)]
-
-
-; [meterRepoName2]
-; DynamicVariables=1
-; Meter=String
-; MeterStyle=styleLeftText
-; MeasureName=PyM_LatestRepos
-; X=10
-; Y=70
-; W=600
-; H=24
-; Text=[PyM_LatestRepos:Func(RepoName, 1)] | [PyM_LatestRepos:Func(RepoUpdatedAt, 1)]
