--- a/Repos List/Local/Local_Repo_List1.ini
+++ b/Repos List/Local/Local_Repo_List1.ini
@@ -30,35 +30,7 @@ colorTextLCM=150,150,255,255
 
 ; Params for the generated list view:
 RepoMeasure=PyM_LocalLatestRepos
-RepoNameStyle=styleRepoName
-RepoDateStyle=styleRepoDate
-RepoLCMStyle=styleRepoLCM
-RepoLCAStyle=styleRepoLCA
-offsetX = 0
-offsetY = 40
-spacingV = 10
-entryW = 600
-entryH = 40
-; Name
-entryNameX=5
-entryNameY=0
-entryNameW=250
-entryNameH=20
-; Date
-entryDateX=30
-entryDateY=25
-entryDateW=350
-entryDateH=20
-; Commit Message
-entryCommitMessageX=255
-entryCommitMessageY=5
-entryCommitMessageW=245
-entryCommitMessageH=20
-; Commit Author
-entryCommitAuthorX=235
-entryCommitAuthorY=25
-entryCommitAuthorW=245
-entryCommitAuthorH=20
+
 
 ; ----------------------------------
 ; MEASURES return some kind of value
@@ -79,67 +51,7 @@ UpdateDivider=1
 ; ----------------------------------
 ; STYLES are used to "centralize" options
 ; ----------------------------------
-
-[styleTitle]
-StringAlign=Center
-StringCase=Upper
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,50
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=10
-AntiAlias=1
-ClipString=1
-
-[styleRepoName]
-StringAlign=Left
-; Meters using styleLeftText will be left-aligned.
-StringCase=None
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,20
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=12
-AntiAlias=1
-ClipString=1
-
-[styleRepoDate]
-StringAlign=Left
-StringCase=None
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,20
-FontColor=#colorTextDim#
-FontFace=#fontName#
-FontSize=8
-AntiAlias=1
-ClipString=1
-
-[styleRepoLCM]
-StringAlign=Left
-StringCase=None
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,20
-FontColor=#colorTextLCM#
-FontFace=#fontName#
-FontSize=10
-AntiAlias=1
-ClipString=1
-
-[styleRepoLCA]
-StringAlign=Left
-StringCase=None
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,20
-FontColor=#colorTextDim#
-FontFace=#fontName#
-FontSize=10
-AntiAlias=1
-ClipString=1
+@include=#@#styles/repo_list_styles.inc
 
 [styleSeperator]
 SolidColor=255,255,255,15
@@ -154,7 +66,7 @@ MeterStyle=styleTitle
 MeasureName=PyM_LocalLatestRepos
 ; Using MeterStyle=styleTitle will basically "copy" the
 ; contents of the [styleTitle] section here during runtime.
-X=150
+X=15
 Y=12
 W=600
 H=18
@@ -162,6 +74,6 @@ Text=%1:
 ; %1 stands for the value of MeasureName (measureTime in this case)
 
 ; Include the list view:
-@include=#@#py/dynamic_inc/repo_list_view.inc
+@include=#@#py/dynamic_inc/local_repo_list.inc
 
 
